istio_scenarios/istio-kong/istio-kong/kong-gateway-plain.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kong-gateway
  annotations:  
    kubernetes.io/ingress.class: kong
    konghq.com/preserve-host: "false"
  namespace: kong-istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kong.192.168.28.136.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kong-vs
  namespace: kong-istio
spec:
  hosts:
  - "kong.192.168.28.136.nip.io"
  gateways:
  - kong-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kong-1614614380-kong-proxy.kong-istio.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  annotations:
    kubernetes.io/ingress.class: kong
  namespace: shop
spec:
  rules:
    - host: kong.192.168.28.136.nip.io
      http:
        paths:
          - path: /java/products/all
            pathType: Prefix
            backend:
              service:
                name: java-proxy
                port:
                  number: 8080  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    kubernetes.io/ingress.class: kong
  namespace: shop
spec:
  rules:
    - host: kong.192.168.28.136.nip.io
      http:
        paths:
          - path: /api/products/all
            pathType: Prefix
            backend:
              service:
                name: python-proxy
                port:
                  number: 8080 
---
